# controllers/contacts.js
@@ -2,26 +2,26 @@ const mongodb = require('../data/database');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
-  //#swagger.tags=['Users']
-  const result = await mongodb.getDb().db().collection('users').find();
-  result.toArray().then((users) => {
+  //#swagger.tags=['Contacts']
+  const result = await mongodb.getDb().db().collection('contacts').find();
+  result.toArray().then((contacts) => {
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(users);
+    res.status(200).json(contacts);
   });
 };
 
 const getSingle = async (req, res) => {
-  //#swagger.tags=['Users']
+  //#swagger.tags=['Contacts']
   const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('users').find({ _id: userId });
-  result.toArray().then((users) => {
+  const result = await mongodb.getDb().db().collection('contacts').find({ _id: userId });
+  result.toArray().then((contacts) => {
     res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(users[0]);
+    res.status(200).json(contacts[0]);
   });
 };
 
 const createUser = async (req, res) => {
-  //#swagger.tags=['Users']
+  //#swagger.tags=['Contacts']
   const user = {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
@@ -29,7 +29,7 @@ const createUser = async (req, res) => {
     email: req.body.email,
     favoriteColor: req.body.favoriteColor,
   };
-  const response = await mongodb.getDb().db().collection('users').insertOne(user);
+  const response = await mongodb.getDb().db().collection('contacts').insertOne(user);
   if (response.acknowledged > 0) {
     res.status(204).send();
   } else {
@@ -40,7 +40,7 @@ const createUser = async (req, res) => {
 };
 
 const updateUser = async (req, res) => {
-  //#swagger.tags=['Users']
+  //#swagger.tags=['Contacts']
   const userId = new ObjectId(req.params.id);
   const user = {
     firstName: req.body.firstName,
@@ -49,7 +49,7 @@ const updateUser = async (req, res) => {
     email: req.body.email,
     favoriteColor: req.body.favoriteColor,
   };
-  const response = await mongodb.getDb().db().collection('users').replaceOne({ _id: userId }, user);
+  const response = await mongodb.getDb().db().collection('contacts').replaceOne({ _id: userId }, user);
   if (response.modifiedCount > 0) {
     res.status(204).send();
   } else {
@@ -60,9 +60,9 @@ const updateUser = async (req, res) => {
 };
 
 const deleteUser = async (req, res) => {
-  //#swagger.tags=['Users']
+  //#swagger.tags=['Contacts']
   const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db().collection('users').deleteOne({ _id: userId }, true);
+  const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: userId }, true);
   if (response.deletedCount > 0) {
     res.status(204).send();
   } else {
