# routes/contacts.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 
-const userController = require('../controllers/users');
+const userController = require('../controllers/contacts');
 
 router.get('/', userController.getAll);
 router.get('/:id', userController.getSingle);
