# routes/index.js
@@ -7,7 +7,7 @@ router.get('/', (req, res) => {
     res.send('Hello World')
 });
 
-router.use('/users', require('./users'));
+router.use('/contacts', require('./contacts'));
 
 
 module.exports = router;
